Fix Twitch embed height on mobile

--- a/resources/css/components/twitch.css
+++ b/resources/css/components/twitch.css
@@ -4,4 +4,23 @@
     font-family: $font-stack-secondary;
     margin: 0;
   }
+
+  &__embed {
+    display: block;
+    padding-top: calc(56.25% * 2);
+    position: relative;
+
+    @media screen and (min-width: 37.5rem) { /* Tablet Portrait / 37.5rem / 600px */
+      padding-top: 56.25%;
+    }
+
+    > * {
+      display: block;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+    }
+  }
 }
